desktop: fix stale arrow cursor when entering combo popups
JavaFX skips cursor pushes its scene cache says are applied, but popups
get a fresh native window each show; clear the cache on pointer entry.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>